[B]0.6.5[/B]
Option to change infotags back to audio/video codec (Skin Settings > Infomation)
Tidy up of skin settings
Added buffering label to seekbar
Auto-show widgets now keeps widgets up persistently on simple home
Removed fade from panel home widget change
Fixed widgets not hiding on panel home when favourites visible

[B]0.6.4[/B]
Gotham Work Begins
 - Added Settings Level Change (press left from settings category)
 - Added Settings Level indicator
 - Added Settings Description

Added weather to Simple Home Screen when profile info is disabled
Changed Navigation on Simple Home (Down for submenu Up for widgets always)

Added Aspect and Channels Flags

[B]0.6.3[/B]
Made infostrip wider
Infostrip big posters (show labels view option)
Added option for shutdown button on homescreen menu
Fixed update videos in side menu

[B]0.6.2[/B]
Info list for MyMusicSongs.xml
Banner list view for seasons

[B]0.6.1[/B]
Hooks for tvtunes on movies
Fixed panel list not showing episode unwatched in tvshows with no back panel
Startup playlist
Remove PaulSalem's mod for smoother extrafanart as it causes bugs (display wrong fanart when no extrafanart available)

[B]0.6.0[/B]
View options to add panel behind views:
  ** panel poster, panel list, info wall, info list, info strip, thumbnails

[B]0.5.9[/B]
Added song info to banner, info and big list
Can queue items and change rating from song info
Song info in playlist mode can move items up/down and remove
Added "now playing" quick link to side menu
Infostrip for videos
Fixed Time labels in weather

[B]0.5.8[/B]
Fixed weather widget reloading upon power menu access in panel view
Added loading indicator for widgets in panel view
Updated from transifex
Made music files/playlist view menu consistent
Made adv filter consistent
Added update buttons to side menus
Added viewtypes to movie sets/collections view
Fixed thumbs/info-wall for collections view

[B]0.5.7[/B]
Info-wall view for episodes