@@ -2,7 +2,7 @@
     <include name="Common-Clock">
         <control type="group">
         	<visible>!Skin.HasSetting(hide.commonclock)</visible>
-            <animation effect="fade" start="0" end="100" delay="250" time="150" condition="Window.IsActive(home) + StringCompare(Skin.String(homescreen.style),panel) + ![Control.HasFocus(82) | Control.HasFocus(83) | Control.HasFocus(84) | Control.HasFocus(88) | Control.HasFocus(89) | Control.HasFocus(90)]">Conditional</animation>
+            <!--<animation effect="fade" start="0" end="100" delay="250" time="150" condition="Window.IsActive(home) + StringCompare(Skin.String(homescreen.style),panel) + ![Control.HasFocus(82) | Control.HasFocus(83) | Control.HasFocus(84) | Control.HasFocus(88) | Control.HasFocus(89) | Control.HasFocus(90)]">Conditional</animation>-->
             <animation type="WindowOpen" condition="Window.IsActive(loginscreen) | [Window.IsActive(startup) + !Window.Previous(loginscreen)] | Window.Previous(fullscreenvideo) | Window.Previous(visualisation) | Window.Previous(slideshow)" reversible="false">
                 <effect type="fade" start="0" end="100" time="300" tween="sine" easing="inout" />
             </animation>
