@@ -1,8 +1,9 @@
 <includes>
 	
 	<include name="Mod_HomeList">
+	
 		<control type="group">
-			<posy>220</posy>
+			<posy>230</posy>
 			<control type="group">
 				<visible>!Window.IsVisible(script-globalsearch-main.xml) + !Window.IsVisible(script-globalsearch-infodialog.xml) + !Window.IsVisible(script-globalsearch-contextmenu.xml) + !Window.IsVisible(virtualkeyboard) + IsEmpty(Window.Property(HomeSearch)) + !Window.IsVisible(playercontrols)</visible>
 				<animation effect="fade" time="350">WindowOpen</animation>
@@ -20,6 +21,8 @@
 						<height>580</height>
 						<texture border="40">arctic/common/border-20.png</texture>
 						<animation effect="zoom" start="-10,140,1940,580" end="-10,135,1940,810" time="350" tween="cubic" easing="inout" condition="Control.HasFocus(82) | Control.HasFocus(90) | Control.HasFocus(88) | Control.HasFocus(89) | Control.HasFocus(83) | Control.HasFocus(84)">Conditional</animation>
+						<!--<animation effect="zoom" start="-10,140,1940,580" end="-10,135,1940,810" time="350" tween="cubic" easing="inout" condition="Control.HasFocus(83) | Control.HasFocus(84)">Conditional</animation>
+						<animation effect="zoom" start="-10,140,1940,580" end="-10,135,1940,770" time="350" tween="cubic" easing="inout" condition="Control.HasFocus(82) | Control.HasFocus(90) | Control.HasFocus(88) | Control.HasFocus(89)">Conditional</animation>-->
 					</control>
 					<control type="image">
 						<posx>10</posx>
@@ -52,6 +55,10 @@
 					<aligny>center</aligny>
 					<itemgap>5</itemgap>
 					<include>Mod_525GroupList</include>
+					<!--<visible>![Control.HasFocus(82) | Control.HasFocus(90) | Control.HasFocus(88) | Control.HasFocus(89)]</visible>
+					<animation type="Hidden">
+                        <effect type="fade" start="100" end="0" delay="0" time="650" tween="cubic" easing="out"/>
+					</animation>-->
 				</control>
 				<control type="list" id="525">
 					<onup>SetFocus(83,0)</onup>
@@ -85,7 +92,8 @@
 					<onright>84</onright>
 					<onback>525</onback>
 					<posx>35</posx>
-					<posy>636</posy>
+					<!--<posy>636</posy>-->
+					<posy>486</posy>
 					<scrolltime tween="cubic" easing="out">500</scrolltime>
 					<width>1840</width>
 					<height>220</height>
@@ -263,18 +271,12 @@
 					</content>
 				</control>
 				
-				<!-- BOTTOM FANART AND INFO PANEL -->
+				
+			    <!-- WIDGETS -->
 				<control type="group">
-					<posy>459</posy>
-					<visible>Control.HasFocus(82) | Control.HasFocus(90) | Control.HasFocus(88) | Control.HasFocus(89)</visible>
-					<include>panel.slidedown.anim</include>
-					<animation effect="fade" start="0" end="100" time="450" tween="cubic" easing="out" reversible="false">Visible</animation>
-					<include>Home-Fanart-Info-Content</include>
-				</control>
-			
-				<control type="group">
-					<animation effect="slide" start="0" end="0,-70" time="350" tween="cubic" easing="inout" condition="Control.HasFocus(82) | Control.HasFocus(90) | Control.HasFocus(88) | Control.HasFocus(89) | Control.HasFocus(84)">Conditional</animation>
-					<animation effect="slide" start="0" end="0,150" time="350" tween="cubic" easing="inout" condition="Control.HasFocus(83)">Conditional</animation>
+					<!--<animation effect="slide" start="0" end="0,-70" time="350" tween="cubic" easing="inout" condition="Control.HasFocus(82) | Control.HasFocus(90) | Control.HasFocus(88) | Control.HasFocus(89) | Control.HasFocus(84)">Conditional</animation>
+					<animation effect="slide" start="0" end="0,150" time="350" tween="cubic" easing="inout" condition="Control.HasFocus(83)">Conditional</animation>-->
+					<animation effect="slide" start="0" end="0,-220" time="350" tween="cubic" easing="inout" condition="Control.HasFocus(82) | Control.HasFocus(90) | Control.HasFocus(88) | Control.HasFocus(89) | Control.HasFocus(84)">Conditional</animation>
 					<include>listEndAnimation</include>
 					<!-- GREY PANEL -->
 					<control type="image">
@@ -304,14 +306,9 @@
 						<label>$INFO[Container(84).ListItem.Label]</label>
 						<include>Mod_RecentLabel</include>
 						<visible>Control.HasFocus(84)</visible>
-					</control>
-					
-					
-					
-					<!-- WIDGETS -->
+					</control>					
 					<control type="group">
 						<posy>12</posy>
-						
 						<animation effect="fade" start="100" end="0" time="350" condition="Window.IsActive(favourites)">Conditional</animation>
                         <animation effect="fade" start="0" end="100" delay="150" time="350" condition="!Window.IsActive(favourites)">Conditional</animation>
 						<control type="label">
@@ -446,17 +443,28 @@
 						</control>
 					</control>
 				</control>
+				<!-- INFO PANEL -->
+				<control type="group">
+					<posy>459</posy>
+					<posy>-20</posy>
+					<visible>[Control.HasFocus(82) | Control.HasFocus(90) | Control.HasFocus(88) | Control.HasFocus(89)]</visible>
+					<include>panel.slidedown.anim</include>
+					<animation type="Visible">
+                        <!--<effect type="slide" start="0,-400" end="0" time="350" tween="cubic" easing="out" reversible="false"/>-->
+                        <effect type="fade" start="0" end="100" delay="200" time="350" tween="cubic" easing="out" reversible="false"/>
+					</animation>
+					<!--<control type="image">
+                        <posx>-10</posx>
+                        <posy>-40</posy>
+                        <width>1940</width>
+                        <height>320</height>
+                        <texture border="15">arctic/common/panel.png</texture>
+                        <bordertexture border="40">arctic/common/border-20.png</bordertexture>
+                        <bordersize>20</bordersize>
+                    </control>-->
+					<include>Home-Fanart-Info-Content</include>
+				</control>
 			</control>
-		</control>
-		<control type="button" id="85">
-			<width>1</width>
-			<height>1</height>
-			<visible allowhiddenfocus="true">false</visible>
-			<onclick>SetFocus(84)</onclick>
-			<onup>525</onup>
-			<ondown>525</ondown>
-			<onleft>525</onleft>
-			<onright>525</onright>
 		</control>
 	</include>
 </includes>
