@@ -5,6 +5,7 @@ Added buffering label to seekbar
 Auto-show widgets now keeps widgets up persistently on simple home
 Removed fade from panel home widget change
 Fixed widgets not hiding on panel home when favourites visible
+Tidy panel animation -- no longer obscures clock
 
 [B]0.6.4[/B]
 Gotham Work Begins
